[package]
name = "if_utils"
version = "0.1.0"
edition = "2024"
description = "个人使用的 Rust 工具集合."

# [profile.dev]
# lto = false
# opt-level = 1
# debug = true
# debug-assertions = true

# [profile.release]
# lto = "thin"
# opt-level = 3
# strip = true
# debug = 1
# panic = "abort"
# codegen-units = 1
# overflow-checks = false
# debug-assertions = false

[features]
default = ["flexi_logger"]
flexi_logger = ["dep:flexi_logger", "dep:log"]
serde_json = ["dep:serde_json"]
reqwest = ["dep:reqwest", "dep:bytes"]
aes_gcm = ["dep:aes-gcm", "dep:base64", "dep:rand"]
mysql = ["dep:mysql_async"]


[dependencies]
anyhow = "1.0.100"
flate2 = "1.0.13"
serde = { version = "1.0.228", features = ["derive"] }

base64 = { version = "0.22.1", optional = true }
rand = { version = "0.10.0", optional = true }

log = { version = "0.4.29", optional = true }
flexi_logger = { version = "0.31.7", optional = true }

serde_json = { version = "1.0.145", optional = true }

bytes = { version = "1.11.0", optional = true }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "socks", "gzip", "brotli", "deflate"], optional = true }

aes-gcm = { version = "0.10", optional = true }

mysql_async = { version = "0.36.1", default-features = false, features = ["rust_decimal", "bigdecimal", "chrono"], optional = true }
